--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Set C-x as a prefix key
-unbind-key C-k
-set-option -g prefix C-k
+unbind-key C-x
+set-option -g prefix C-x
+
+# allow mouse
+set -g mouse on
 
 # Improve colors
 set -g default-terminal 'screen-256color'
