--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,8 +12,8 @@ set -g default-terminal 'screen-256color'
 set -g history-limit 10000
 
 # Customize the status line
-set -g status-fg  green
-set -g status-bg  black
+set -g status-fg  black
+set -g status-bg  white
 
 # Remap keys for splitting screen to more symbolic one
 bind-key _ split-window -v
