--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 unbind-key C-x
 set-option -g prefix C-x
 
+# Copy useful environment variables into new shells from the parent environment
+set -g update-environment -r
+
 # allow mouse
 set -g mouse on
 
@@ -16,8 +19,8 @@ set -g status-fg  black
 set -g status-bg  white
 
 # Remap keys for splitting screen to more symbolic one
-bind-key _ split-window -v
-bind-key + split-window -h
+bind-key _ split-window -v -c "#{pane_current_path}"
+bind-key + split-window -h -c "#{pane_current_path}"
 
 # Shift arrow to switch windows
 bind ( previous-window
