--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,8 @@ set -g status-bg  white
 # Remap keys for splitting screen to more symbolic one
 bind-key _ split-window -v -c "#{pane_current_path}"
 bind-key + split-window -h -c "#{pane_current_path}"
+bind-key c new-window      -c "#{pane_current_path}"
+
 
 # Shift arrow to switch windows
 bind ( previous-window
