--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# Set C-x as a prefix key
-unbind-key C-x
-set-option -g prefix C-x
+# Set C-a as a prefix key
+unbind-key C-b
+set-option -g prefix C-a
 
 # Copy useful environment variables into new shells from the parent environment
 set -g update-environment -r
@@ -19,14 +19,13 @@ set -g status-fg  black
 set -g status-bg  white
 
 # Remap keys for splitting screen to more symbolic one
-bind-key _ split-window -v -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 bind-key + split-window -h -c "#{pane_current_path}"
 bind-key c new-window      -c "#{pane_current_path}"
 
-
 # Shift arrow to switch windows
-bind ( previous-window
-bind ) next-window
+bind [ previous-window
+bind ] next-window
 
 # Vim style pane selection
 bind h select-pane -L
