--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,24 +8,24 @@ set -g update-environment -r
 # allow mouse
 set -g mouse on
 
+# escape-time
+set-option -sg escape-time 10
+
+# focus-events
+set-option -g focus-events on
+
 # Improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
-# Set scrollback buffer to 10000
-set -g history-limit 10000
-
-# Customize the status line
-set -g status-fg  black
-set -g status-bg  white
-
-# Remap keys for splitting screen to more symbolic one
+# Remap keys for splitting screen
 bind-key - split-window -v -c "#{pane_current_path}"
-bind-key + split-window -h -c "#{pane_current_path}"
+bind-key = split-window -h -c "#{pane_current_path}"
 bind-key c new-window      -c "#{pane_current_path}"
 
-# Shift arrow to switch windows
-bind [ previous-window
-bind ] next-window
+# switch windows
+bind n previous-window
+bind m next-window
 
 # Vim style pane selection
 bind h select-pane -L
