--- a/alacritty.toml
+++ b/alacritty.toml
@@ -4,7 +4,7 @@ term = "xterm-256color"
 # Colors (acme) - modified.
 # Default colors
 [colors.primary]
-background =  '#ffffea'
+background =  '#ffffdd'
 foreground =  '#000000'
 
 [colors.bright]
